--- a/frontend/src/pages/voicecustomer/VoiceCustomer.module.css
+++ b/frontend/src/pages/voicecustomer/VoiceCustomer.module.css
@@ -65,6 +65,7 @@
 
 .pageContainer{
     background-color: #f9fafb;
+    min-height: 100vh;
 }
 .cardsGrid {
     display: flex;
